[ios] Handle larger fonts in content suggestions cell.

Bug: 833941
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Iecd425473551185e2c0ff381480a7bddd46cb108
Reviewed-on: https://chromium-review.googlesource.com/1034219
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554733}
Former-commit-id: 4633a457b40fa2f4319776cfc57dac3025ac4bd0